0.1.9 -> 0.1.10

- Added ADR instruction
- Added BFC instruction
- Added BFI instruction
- Added shortcuts and shortcut hints
- Improved Linux execution script (discovering and selecting JRE version)
- Improved Syntax error message (specify file in most of the cases)
- Fixed Legacy Parser skipping incorrect instructions when it should send a notification
- Fixed Step Over task GUI (buttons stayed enabled)


0.1.8 -> 0.1.9

- Added more screenshots in the MetaInfos
- Added line marking when double-clicking in labels
- Fixed Flatpak version poor performances (allowing OpenGL)
- Fixed line marking disappearing when the PC does not move
- Fixed Step Over task (skipped an instruction)
- Adjusted the default simulation interval to prevent front-end bugs


0.1.7 -> 0.1.8

- Added layout preferences saving
- Added editor tabs reordering
- Modified change highlighting (no more fading)
- Modified Step Over task (based on nesting count)
- Fixed label verifying process
- Fixed global accessibility
- Fixed exception throwing when launching non-saved file
- Fixed symbols address setting (did not change all symbols addresses)


0.1.6 -> 0.1.7

- Added new splash screens
- Added support for multi-files projects
- Added instruction address in editors margins
- Added symbol and labels observation tab
- Added memory summary observation tab
- Added stack pointer following setting
- Added value update indicator
- Fixed memory, stack and register tabs unavailability when not simulating
- Fixed simulation speed setting changeability when simulating
- Optimized line marking
- Reduced simulation interval lower threshold


0.1.5 -> 0.1.6

- Fixed stack entry sync with current simulation data
- Fixed unread instruction when placed in the same line as a label
- Added menu (in View) to control memory columns visibility
- Fixed cross-platform compatibility
- Added Chocolatey packaging


0.1.4 -> 0.1.5

- Fixed a bug that prevented updating registers used in STR or LDR instructions